--- a/src/app/core/component/navbar/navbar.component.scss
+++ b/src/app/core/component/navbar/navbar.component.scss
@@ -20,11 +20,12 @@ div[searchNavPlace] {
         color: $primaryColor;
 
         header {
-            @include clickBehaviour();
-
-            h4 {
-                font-size: $fontSizeCaption;
-                @include stripper();
+            button{
+                @include iconButton();
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
 
@@ -124,8 +125,8 @@ div[searchNavPlace] {
 
         .item-list {
             height: 100%;
-
             .item-link {
+                padding:4px 8px  !important;
                 height: 100%;
                 min-width: 70px;
                 @include verticalCenter();
