--- a/src/app/shared/component/product-shopping-action/product-shopping-action.component.html
+++ b/src/app/shared/component/product-shopping-action/product-shopping-action.component.html
@@ -3,7 +3,7 @@
         <!-- if product is add to cart  -->
         <ng-container *ngIf="isAdd">
             <mat-icon>add_reaction_outline</mat-icon>
-            <span *ngIf="!isLastView">تم الاضافه بنجاح</span>
+            <span *ngIf="!isLastView">تم الاضافه </span>
         </ng-container>
         <!-- if product not exist in cart -->
         <ng-container *ngIf="!isAdd">
