--- a/src/app/core/component/slide-nav/slide-nav.component.html
+++ b/src/app/core/component/slide-nav/slide-nav.component.html
@@ -1,4 +1,3 @@
-
 <nav (click)="scope($event)" sidbarOverlay [@slideInOut]="open ? 'in' : 'out'">
 
     <div class="container" slideBar #slideBar>
@@ -10,38 +9,44 @@
         <div class="row" itemList>
             <div id="items-nav">
                 <mat-toolbar>
-
                     <li class="item-list">
-                        <a class="item-link" routerLink="" [matMenuTriggerFor]="menu" mat-button>
+                        <a class="item-link" [matMenuTriggerFor]="menu" mat-button>
                             <mat-icon>keyboard_arrow_down</mat-icon>
                             <span> الاقسام</span>
                         </a>
                     </li>
 
-                    <li class="item-list">
-                        <a class="item-link" routerLink="" mat-button>الرئيسة</a>
+                    <li class="item-list" (click)="close()">
+                        <a class="item-link" routerLink="home" routerLinkActive="active-navItem" mat-button>الرئيسة</a>
                     </li>
 
-                    <li class="item-list">
-                        <a class="item-link" routerLink="" mat-button>قائمة الأمنيات</a>
+                    <li class="item-list" (click)="close()">
+                        <a class="item-link" routerLink="/support/hoppies" routerLinkActive="active-navItem"
+                            mat-button>قائمة الأمنيات</a>
                     </li>
 
-                    <li class="item-list">
-                        <a class="item-link" routerLink="" mat-button>تواصل معنا</a>
+                    <li class="item-list" (click)="close()">
+                        <a class="item-link " routerLink="/support/contactUs" routerLinkActive="active-navItem"
+                            mat-button>تواصل معنا</a>
                     </li>
 
-                    <li class="item-list">
-                        <a class="item-link" routerLink="" mat-button>من نحن</a>
+                    <li class="item-list" (click)="close()">
+                        <a class="item-link" routerLink="/support/blog" routerLinkActive="active-navItem" mat-button>من
+                            نحن</a>
                     </li>
 
                     <mat-menu #menu="matMenu" yPosition="above" xPosition="after">
-                        <button class="menuItem" mat-menu-item routerLinkActive="activeLink" routerLink="">depart
+                        <button class="menuItem" (click)="close()" mat-menu-item routerLinkActive="activeLink"
+                            routerLink="/department/1" routerLinkActive="active-navItem">القسم الاول
                         </button>
-                        <button class="menuItem" mat-menu-item routerLinkActive="activeLink" routerLink="">depart
+                        <button class="menuItem" (click)="close()" mat-menu-item routerLinkActive="activeLink"
+                            routerLink="/department/2" routerLinkActive="active-navItem">القسم الثاني
                         </button>
-                        <button class="menuItem" mat-menu-item routerLinkActive="activeLink" routerLink="">depart
+                        <button class="menuItem" (click)="close()" mat-menu-item routerLinkActive="activeLink"
+                            routerLink="/department/3" routerLinkActive="active-navItem">القسم الثالث
                         </button>
-                        <button class="menuItem" mat-menu-item routerLinkActive="activeLink" routerLink="">depart
+                        <button class="menuItem " (click)="close()" mat-menu-item routerLinkActive="activeLink"
+                            routerLink="/department/4" routerLinkActive="active-navItem">القسم الرابع
                         </button>
                     </mat-menu>
 
