--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,14 +89,12 @@ body {
 @mixin skeletonNativeDesign() {
     position: relative;
     overflow: hidden;
-
+    z-index: 3;
     * {
         color: transparent !important;
         background-color: transparent !important;
     }
-
-    z-index: 3;
-
+    
     &::after {
         width: 100%;
         height: 100%;
@@ -134,8 +132,6 @@ body {
     }
 
     .skeleton-slider {
-        @include skeletonNativeDesign();
-
         &::after {
             border-radius: 0px;
         }
@@ -146,6 +142,10 @@ body {
             height: .7rem;
             margin: auto;
         }
+    }
+
+    .skeleton_toggle{
+        background-color: transparent !important;
     }
 
     .skeleton-card__text {
