--- a/src/app/shared/component/product-shopping-action/product-shopping-action.component.html
+++ b/src/app/shared/component/product-shopping-action/product-shopping-action.component.html
@@ -1,25 +1,25 @@
-<div class="shopping" [class.lastView]="isLastView">
+<div class="shopping" [class.lastView]="isSmallCard">
     <button addToShoppingCart (click)="addToCart()" [disabled]="isAdd">
         <!-- if product is add to cart  -->
         <ng-container *ngIf="isAdd">
             <mat-icon>add_reaction_outline</mat-icon>
-            <span *ngIf="!isLastView">تم الاضافه </span>
+            <span *ngIf="!isSmallCard">تم الاضافه </span>
         </ng-container>
         <!-- if product not exist in cart -->
         <ng-container *ngIf="!isAdd">
             <mat-icon>add_shopping_cart</mat-icon>
-            <span *ngIf="!isLastView">اضف الي السلة</span>
+            <span *ngIf="!isSmallCard">اضف الي السلة</span>
         </ng-container>
 
     </button>
 
-    <div product-action>
+    <div product-action >
         <button>
             <mat-icon share>share</mat-icon>
         </button>
-        <button (click)="isFavorite =!isFavorite">
-            <mat-icon *ngIf="!isFavorite" unFavorite>favorite_outline</mat-icon>
-            <mat-icon *ngIf="isFavorite" favorite>favorite</mat-icon>
+        <button (click)="isFavoriteAction()">
+            <mat-icon *ngIf="!product.isFavorite" unFavorite>favorite_outline</mat-icon>
+            <mat-icon *ngIf="product.isFavorite" favorite>favorite</mat-icon>
         </button>
     </div>
 
