--- a/src/app/core/component/home/home.component.html
+++ b/src/app/core/component/home/home.component.html
@@ -1,61 +1,55 @@
-<!-- slider  image -->
-<section [class.active-skeleton]="waiting">
-
-    <section class="caption skeleton skeleton-slider">
-        <caption-slider [imgList]="bgImgList"> </caption-slider>
-    </section>
-
-    <!-- product list  -->
-    <section productList>
-        <!-- product list view  -->
-        <div class="container" *ngIf="!smallSize">
-
-            <div lastView>
-                <div divider class="lasView">
-                    <p>منتجات تصفحتها مؤخرا</p>
-                </div>
-                <ng-container *ngFor="let product of products">
-                    <productCard *ngIf="product?.isViewBefor" [smallCard]="true" [product]="product"></productCard>
-                </ng-container>
+<!-- home page  -->
+<section class="container" [class.active-skeleton]="isLoading">
+    <!-- Slider -->
+    <div slider class="skeleton skeleton-slider">
+        <slider [imgList]="bgImgList"> </slider>
+    </div>
+    <!-- Categories -->
+    <div categories>
+        <!-- Static category -->
+        <ng-container *ngIf="!isTabletMode">
+            <div class=" lastView">
+                <p>منتجات تصفحتها مؤخرا</p>
             </div>
-
-            <div newProduct>
+            <div class="new">
                 <div divider>
                     <p>وصل حديث</p>
                     <span dividerLine> </span>
                     <button mat-stroked-button>عرض الكل</button>
                 </div>
-                <ng-container *ngFor="let product of products">
-                    <productCard *ngIf="!product?.isViewBefor" [product]="product"></productCard>
-                </ng-container>
             </div>
-
-        </div>
-
-        <!--  chip button -->
-        <div chip *ngIf="smallSize">
-            <button routerLinkActive="active-chip" routerLink="/" [queryParams]="{category:'new'}">وصل حديثاً</button>
-            <button routerLinkActive="active-chip" routerLink="/" [queryParams]="{category:'all'}">عرض الكل</button>
-            <button routerLinkActive="active-chip" routerLink="/" [queryParams]="{category:'lastView'}">
+        </ng-container>
+        <!-- Chips -->
+        <div class="chip" *ngIf="isTabletMode">
+            <button class="skeleton" routerLinkActive="active-chip" routerLink="/" [queryParams]="{category:'new'}">وصل
+                حديثاً</button>
+            <button class="skeleton" routerLinkActive="active-chip" routerLink="/"
+                [queryParams]="{category:'lastView'}">
                 منتجات تصفحتها مؤخراً</button>
+            <button class="skeleton" routerLinkActive="active-chip" routerLink="/" [queryParams]="{category:'all'}">عرض
+                الكل</button>
+        </div>
+    </div>
+    <!-- prockuct list view  -->
+    <div product-view>
+        <!--last view product -->
+        <div class="lastView" *ngIf="!isTabletMode">
+            <ng-container *ngFor="let product of products?.lastView ; trackBy: trackByProductId">
+                <!-- for loader skeleton -->
+                <productCard *ngIf=" isLoading" [smallCard]="true" [product]="product"></productCard>
+                <!-- real product view -->
+                <productCard *ngIf="!isLoading" [@swap] [smallCard]="true" [product]="product"></productCard>
+            </ng-container>
         </div>
 
-        <!-- Product list in small mode  -->
-        <div swap *ngIf="smallSize">
-            <div newProduct>
-                <ng-container *ngFor="let product of products">
-
-                    <productCard [@swap]="activeCategory == 'new' && !product?.isViewBefor? 'in':'out'"
-                        [product]="product">
-                    </productCard>
-
-                    <productCard [@swap]="activeCategory == 'all' ? 'in':'out'" [product]="product"></productCard>
-                    <productCard [@swap]="activeCategory == 'lastView' && product?.isViewBefor? 'in':'out'"
-                        [product]="product"></productCard>
-
-                </ng-container>
-            </div>
+        <!--product View List-->
+        <div class="new">
+            <ng-container *ngFor="let product of productList; trackBy: trackByProductId">
+                <!-- for loader skeleton -->
+                <productCard *ngIf="isLoading" [product]="product"></productCard>
+                <!-- real product view -->
+                <productCard *ngIf="!isLoading" [@swap] [product]="product"></productCard>
+            </ng-container>
         </div>
-
-    </section>
+    </div>
 </section>
