--- a/src/app/core/component/slider/slider.component.scss
+++ b/src/app/core/component/slider/slider.component.scss
@@ -4,6 +4,7 @@ section {
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .bgImgCaption {
@@ -59,7 +60,6 @@ section {
 .backOutLeft {
     animation-name: backOutLeft;
     @include outAnimation();
-
 }
 
 .backOutRight {
@@ -75,74 +75,4 @@ section {
 .backInRight {
     @include inAnimation();
     animation-name: backInRight;
-}
-
-
-@keyframes backOutLeft {
-    0% {
-        opacity: 1;
-        transform: scale(1) translate3d(0,0,0);
-    }
-
-    40% {
-        opacity: 1;
-        transform: scale3d(0.475, 0.475, 0.475) translate3d(42px, 0, 0);
-    }
-
-    to {
-        opacity: 0;
-        transform: scale(0.1) translate3d(-2000px, 0, 0);
-    }
-}
-
-@keyframes backOutRight {
-    0% {
-        opacity: 1;
-        transform: scale(1) translate3d(0,0,0);
-    }
-
-    40% {
-        opacity: 1;
-        transform: scale3d(0.475, 0.475, 0.475) translate3d(-42px, 0, 0);
-    }
-
-    to {
-        opacity: 0;
-        transform: scale(0.1) translate3d(2000px, 0, 0);
-    }
-}
-
-@keyframes backInLeft {
-    from {
-        opacity: 0;
-        transform: scale3d(0.1, 0.1, 0.1) translate3d(-1000px, 0, 0);
-    }
-
-    60% {
-        opacity: 1;
-        transform: scale3d(0.475, 0.475, 0.475) translate3d(10px, 0, 0);
-    }
-
-    100% {
-        opacity: 1;
-        transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
-    }
-
-}
-
-@keyframes backInRight {
-    from {
-        opacity: 0;
-        transform: scale3d(0.1, 0.1, 0.1) translate3d(1000px, 0, 0);
-    }
-
-    60% {
-        opacity: 1;
-        transform: scale3d(0.475, 0.475, 0.475) translate3d(-10px, 0, 0);
-    }
-
-    100% {
-        opacity: 1;
-        transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
-    }
 }
