--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap');
+@import 'app/shared/shared-styles/container.scss';
+@import 'app/shared/shared-styles/skeleton.scss';
+@import 'app/shared/shared-styles/animation.scss';
+
+
 $fontSizeH1: 24pt;
 $fontSizeH2: 18pt;
 $fontSizeH3: 18pt;
@@ -84,139 +89,7 @@ body {
     background-color: rgba(0, 0, 0, .1);
 }
 
-/* skeleton  */
-
-@mixin skeletonNativeDesign() {
-    position: relative;
-    overflow: hidden;
-    z-index: 3;
-    * {
-        color: transparent !important;
-        background-color: transparent !important;
-    }
-    
-    &::after {
-        width: 100%;
-        height: 100%;
-        border-radius: 5px;
-        content: '';
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-    }
-
-}
-
-@keyframes skeleton-loading {
-    0% {
-        background-color: hsl(200, 20%, 80%);
-    }
-
-    100% {
-        background-color: hsl(200, 20%, 95%);
-    }
-}
-
-.active-skeleton {
-    
-    .skeleton {
-        @include skeletonNativeDesign();
-
-        &::after {
-            animation: skeleton-loading 1s linear infinite alternate;
-            z-index: 2;
-        }
-
-    }
-
-    .skeleton-slider {
-        &::after {
-            border-radius: 0px;
-        }
-    }
-
-    .skeleton-nav_item {
-        &::after {
-            height: .7rem;
-            margin: auto;
-        }
-    }
-
-    .skeleton_toggle{
-        background-color: transparent !important;
-    }
-
-    .skeleton-card__text {
-        ::after {
-            height: .7rem;
-            width: 40%;
-        }
-    }
-
-    .skeleton-small_card__text {
-        ::after {
-            height: .3rem !important;
-            width: 40%;
-        }
-    }
-
-    .skeleton-card__footer {
-        ::after {
-            height: .7rem;
-            width: 80%;
-        }
-    }
-
-    .skeleton-small_card__footer {
-        ::after {
-            height: .3rem !important;
-            width: 40%;
-        }
-    }
-
-    .skeleton_none {
-        &::after {
-            animation: none;
-        }
-    }
-
-
-}
-
-
-.container {
-    width: 100%;
-    max-width: 1320px;
-    margin: 0 auto;
-}
-
-@media only screen and (max-width: 1199px) {
-    .container {
-        max-width: 100%;
-        padding: 0 20px;
-    }
-}
-
-@media only screen and (max-width: 991px) {
-    .container {
-        max-width: 100%;
-        padding: 0 15px;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    .container {
-        max-width: 100%;
-        padding: 0 10px;
-    }
-}
-
-@media only screen and (max-width: 575px) {
-    .container {
-        max-width: 100%;
-        padding: 0 5px;
-    }
-
+.active-chip {
+    background-color: tomato !important;
+    color: white;
 }
