--- a/src/app/core/component/navbar/navbar.component.html
+++ b/src/app/core/component/navbar/navbar.component.html
@@ -7,7 +7,7 @@
                 
                 <header>
                     <button routerLink="home">
-                        <img src="../../../../assets/logo/logo.png" alt="">
+                        <img src="./assets/logo/logo.png" alt="">
                     </button>
                 </header>
 
