This commit includes several updates related to the shopping cart functionality. First, a cart model and interface were built, along with a cart item model and interface.Three new actions were also added to handle operations within the cart: adding an item, deleting an item, and updating the quantity of an item.Additionally, a reducer was created to handle the implementation of these actions. Finally, the cart action design was refactored to include an animation when adding an item to the cart. Overall, this commit improves the shopping cart experience for users by streamlining operations and adding visual feedback.

--- a/src/app/shared/component/card-action/card-action.component.html
+++ b/src/app/shared/component/card-action/card-action.component.html
@@ -1,19 +1,17 @@
 <div class="shopping" [class.lastView]="isSmallCard">
-    <button addToShoppingCart (click)="addToCart()" [disabled]="isAdd">
+    <button [@roll] addToShoppingCart (click)="addToCart()" *ngIf="!inCart">
         <!-- if product is add to cart  -->
-        <ng-container *ngIf="isAdd">
-            <mat-icon>add_reaction_outline</mat-icon>
-            <span *ngIf="!isSmallCard">تم الاضافه </span>
-        </ng-container>
-        <!-- if product not exist in cart -->
-        <ng-container *ngIf="!isAdd">
+        <ng-container>
             <mat-icon>add_shopping_cart</mat-icon>
             <span *ngIf="!isSmallCard">اضف الي السلة</span>
         </ng-container>
 
     </button>
 
-    <div product-action >
+    <product-quantity [@roll] *ngIf="inCart" [productQuantity]="inCart" [isSmallCard]="isSmallCard"
+        [productId]="product.id"></product-quantity>
+
+    <div product-action>
         <button>
             <mat-icon share>share</mat-icon>
         </button>
