--- a/src/app/shared/component/card/card.component.html
+++ b/src/app/shared/component/card/card.component.html
@@ -33,8 +33,8 @@
         </div>
 
         <!-- add shopping to card  -->
-        <product-shopping-action class="skeleton" [ngClass]="isSmallCard ? 'skeleton-small_card__footer':'skeleton-card__footer'"
-            [product]="product" [isSmallCard]="isSmallCard"></product-shopping-action>
+        <card-action class="skeleton" [ngClass]="isSmallCard ? 'skeleton-small_card__footer':'skeleton-card__footer'"
+            [product]="product" [isSmallCard]="isSmallCard"></card-action>
 
     </div>
 
